--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,10 @@ a{
 }
 
 @media screen and (min-width: 900px) {
+
+    .principal{
+        justify-content: center;
+    }
   
     .phone{
         display: block;
